# project2_-Pogozhev-_-Evgenii-_-DPO_NOD-

./: .gitignore  Makefile  README.md  db_meta.json  pyproject.toml
src/: decorators.py
src/primitive_db/: core.py  decorators.py  engine.py  main.py  parser.py  utils.py
